--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,172 @@
                         <td class="border px-4 py-2 text-center no-wrap">09, 21, 28, 37, 49, 60</td>
                         <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
                     </tr>
+
+
+
+                    <tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255699135 - 2</td>
+    <td class="border px-4 py-2 text-center no-wrap">05, 08, 20, 21, 27, 32, 40, 41, 43, 48, 56</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2</td>
+    <td class="border px-4 py-2 text-center no-wrap">25, 27, 30, 36, 39, 42, 45, 47, 54, 55</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2</td>
+    <td class="border px-4 py-2 text-center no-wrap">04, 27, 28, 30, 36, 37, 40, 49, 54, 59</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2</td>
+    <td class="border px-4 py-2 text-center no-wrap">02, 06, 10, 13, 15, 18, 37, 47, 48, 54</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">04, 12, 20, 27, 30, 43, 46, 49, 58</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">05, 14, 20, 22, 27, 36, 37, 44, 46</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">08, 12, 14, 30, 47, 49, 52, 55, 57</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">08, 16, 35, 40, 42, 46, 48, 58, 59</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">12, 19, 20, 27, 29, 33, 36, 37, 55</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">15, 16, 20, 25, 30, 33, 50, 55, 56</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">05, 13, 17, 33, 43, 44, 47, 56, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">02, 06, 08, 24, 29, 33, 36, 41, 51</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">10, 12, 18, 23, 27, 30, 38, 43, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">03, 06, 13, 17, 18, 20, 37, 52, 53</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.2</td>
+    <td class="border px-4 py-2 text-center no-wrap">07, 08, 11, 13, 16, 23, 27, 39, 42, 48, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">02, 08, 10, 33, 37, 42, 43, 48, 53</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">06, 11, 21, 23, 27, 34, 36, 45, 57</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">07, 12, 17, 21, 27, 30, 36, 37, 50</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">08, 11, 21, 41, 51, 52, 54, 55, 58</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">11, 20, 37, 38, 39, 48, 52, 54, 56</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">01, 09, 22, 28, 30, 35, 49, 53, 54</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">07, 21, 27, 36, 40, 45, 56, 59, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">05, 12, 13, 17, 18, 21, 28, 35, 54</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">02, 09, 27, 34, 36, 51, 52, 59, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255696018 - 2.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">08, 09, 11, 16, 17, 24, 28, 45, 52</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255346097 - 3</td>
+    <td class="border px-4 py-2 text-center no-wrap">03, 08, 13, 19, 24, 32, 38, 51, 55, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255346097 - 3.2</td>
+    <td class="border px-4 py-2 text-center no-wrap">02, 16, 29, 32, 36, 43, 47, 51, 53, 58</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255346097 - 3.3</td>
+    <td class="border px-4 py-2 text-center no-wrap">07, 16, 21, 33, 46, 47, 48, 49, 53, 56, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255346097 - 3.4</td>
+    <td class="border px-4 py-2 text-center no-wrap">12, 15, 23, 33, 43, 45, 51, 53, 57, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">255346097 - 3.5</td>
+    <td class="border px-4 py-2 text-center no-wrap">06, 07, 13, 17, 27, 38, 41, 44, 46, 52, 56, 58</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">254807458 - 4.1</td>
+    <td class="border px-4 py-2 text-center no-wrap">02, 06, 10, 12, 17, 22, 27, 33, 38, 41, 48, 52, 56, 60</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+<tr>
+    <td class="border px-4 py-2 text-left pl-16 no-wrap">254769601 - 7</td>
+    <td class="border px-4 py-2 text-center no-wrap">03, 05, 09, 12, 17, 21, 28, 33, 35, 42, 46, 48, 58, 59</td>
+    <td class="border px-4 py-2 text-center no-wrap acert-count">0</td>
+</tr>
+
                 </tbody>
             </table>
         </div>
@@ -1295,7 +1461,39 @@
                 { name: "Zé Arthur - 2", numbers: [17, 18, 32, 41, 49, 55] },
                 { name: "Zeca - 1", numbers: [1, 19, 29, 36, 44, 51] },
                 { name: "Zeca - 2", numbers: [9, 21, 28, 37, 49, 60] },
-            ];
+              { name: "255699135 - 2", numbers: [5, 8, 20, 21, 27, 32, 40, 41, 43, 48, 56] },
+  { name: "255696018 - 2", numbers: [25, 27, 30, 36, 39, 42, 45, 47, 54, 55] },
+  { name: "255696018 - 2", numbers: [4, 27, 28, 30, 36, 37, 40, 49, 54, 59] },
+  { name: "255696018 - 2", numbers: [2, 6, 10, 13, 15, 18, 37, 47, 48, 54] },
+  { name: "255696018 - 2.1", numbers: [4, 12, 20, 27, 30, 43, 46, 49, 58] },
+  { name: "255696018 - 2.1", numbers: [5, 14, 20, 22, 27, 36, 37, 44, 46] },
+  { name: "255696018 - 2.1", numbers: [8, 12, 14, 30, 47, 49, 52, 55, 57] },
+  { name: "255696018 - 2.1", numbers: [8, 16, 35, 40, 42, 46, 48, 58, 59] },
+  { name: "255696018 - 2.1", numbers: [12, 19, 20, 27, 29, 33, 36, 37, 55] },
+  { name: "255696018 - 2.1", numbers: [15, 16, 20, 25, 30, 33, 50, 55, 56] },
+  { name: "255696018 - 2.1", numbers: [5, 13, 17, 33, 43, 44, 47, 56, 60] },
+  { name: "255696018 - 2.1", numbers: [2, 6, 8, 24, 29, 33, 36, 41, 51] },
+  { name: "255696018 - 2.1", numbers: [10, 12, 18, 23, 27, 30, 38, 43, 60] },
+  { name: "255696018 - 2.1", numbers: [3, 6, 13, 17, 18, 20, 37, 52, 53] },
+  { name: "255696018 - 2.2", numbers: [7, 8, 11, 13, 16, 23, 27, 39, 42, 48, 60] },
+  { name: "255696018 - 2.3", numbers: [2, 8, 10, 33, 37, 42, 43, 48, 53] },
+  { name: "255696018 - 2.3", numbers: [6, 11, 21, 23, 27, 34, 36, 45, 57] },
+  { name: "255696018 - 2.3", numbers: [7, 12, 17, 21, 27, 30, 36, 37, 50] },
+  { name: "255696018 - 2.3", numbers: [8, 11, 21, 41, 51, 52, 54, 55, 58] },
+  { name: "255696018 - 2.3", numbers: [11, 20, 37, 38, 39, 48, 52, 54, 56] },
+  { name: "255696018 - 2.3", numbers: [1, 9, 22, 28, 30, 35, 49, 53, 54] },
+  { name: "255696018 - 2.3", numbers: [7, 21, 27, 36, 40, 45, 56, 59, 60] },
+  { name: "255696018 - 2.3", numbers: [5, 12, 13, 17, 18, 21, 28, 35, 54] },
+  { name: "255696018 - 2.3", numbers: [2, 9, 27, 34, 36, 51, 52, 59, 60] },
+  { name: "255696018 - 2.3", numbers: [8, 9, 11, 16, 17, 24, 28, 45, 52] },
+  { name: "255346097 - 3", numbers: [3, 8, 13, 19, 24, 32, 38, 51, 55, 60] },
+  { name: "255346097 - 3.2", numbers: [2, 16, 29, 32, 36, 43, 47, 51, 53, 58] },
+  { name: "255346097 - 3.3", numbers: [7, 16, 21, 33, 46, 47, 48, 49, 53, 56, 60] },
+  { name: "255346097 - 3.4", numbers: [12, 15, 23, 33, 43, 45, 51, 53, 57, 60] },
+  { name: "255346097 - 3.5", numbers: [6, 7, 13, 17, 27, 38, 41, 44, 46, 52, 56, 58] },
+  { name: "254807458 - 4.1", numbers: [2, 6, 10, 12, 17, 22, 27, 33, 38, 41, 48, 52, 56, 60] },
+  { name: "254769601 - 7", numbers: [3, 5, 9, 12, 17, 21, 28, 33, 35, 42, 46, 48, 58, 59] }
+];
 
             const resultsWithCounts = participants.map(participant => {
                 const acertos = participant.numbers.filter(num => results.includes(num));
@@ -1534,7 +1732,39 @@
                 { name: "Zé Arthur - 2", numbers: [17, 18, 32, 41, 49, 55] },
                 { name: "Zeca - 1", numbers: [1, 19, 29, 36, 44, 51] },
                 { name: "Zeca - 2", numbers: [9, 21, 28, 37, 49, 60] },
-            ];
+                  { name: "255699135 - 2", numbers: [5, 8, 20, 21, 27, 32, 40, 41, 43, 48, 56] },
+  { name: "255696018 - 2", numbers: [25, 27, 30, 36, 39, 42, 45, 47, 54, 55] },
+  { name: "255696018 - 2", numbers: [4, 27, 28, 30, 36, 37, 40, 49, 54, 59] },
+  { name: "255696018 - 2", numbers: [2, 6, 10, 13, 15, 18, 37, 47, 48, 54] },
+  { name: "255696018 - 2.1", numbers: [4, 12, 20, 27, 30, 43, 46, 49, 58] },
+  { name: "255696018 - 2.1", numbers: [5, 14, 20, 22, 27, 36, 37, 44, 46] },
+  { name: "255696018 - 2.1", numbers: [8, 12, 14, 30, 47, 49, 52, 55, 57] },
+  { name: "255696018 - 2.1", numbers: [8, 16, 35, 40, 42, 46, 48, 58, 59] },
+  { name: "255696018 - 2.1", numbers: [12, 19, 20, 27, 29, 33, 36, 37, 55] },
+  { name: "255696018 - 2.1", numbers: [15, 16, 20, 25, 30, 33, 50, 55, 56] },
+  { name: "255696018 - 2.1", numbers: [5, 13, 17, 33, 43, 44, 47, 56, 60] },
+  { name: "255696018 - 2.1", numbers: [2, 6, 8, 24, 29, 33, 36, 41, 51] },
+  { name: "255696018 - 2.1", numbers: [10, 12, 18, 23, 27, 30, 38, 43, 60] },
+  { name: "255696018 - 2.1", numbers: [3, 6, 13, 17, 18, 20, 37, 52, 53] },
+  { name: "255696018 - 2.2", numbers: [7, 8, 11, 13, 16, 23, 27, 39, 42, 48, 60] },
+  { name: "255696018 - 2.3", numbers: [2, 8, 10, 33, 37, 42, 43, 48, 53] },
+  { name: "255696018 - 2.3", numbers: [6, 11, 21, 23, 27, 34, 36, 45, 57] },
+  { name: "255696018 - 2.3", numbers: [7, 12, 17, 21, 27, 30, 36, 37, 50] },
+  { name: "255696018 - 2.3", numbers: [8, 11, 21, 41, 51, 52, 54, 55, 58] },
+  { name: "255696018 - 2.3", numbers: [11, 20, 37, 38, 39, 48, 52, 54, 56] },
+  { name: "255696018 - 2.3", numbers: [1, 9, 22, 28, 30, 35, 49, 53, 54] },
+  { name: "255696018 - 2.3", numbers: [7, 21, 27, 36, 40, 45, 56, 59, 60] },
+  { name: "255696018 - 2.3", numbers: [5, 12, 13, 17, 18, 21, 28, 35, 54] },
+  { name: "255696018 - 2.3", numbers: [2, 9, 27, 34, 36, 51, 52, 59, 60] },
+  { name: "255696018 - 2.3", numbers: [8, 9, 11, 16, 17, 24, 28, 45, 52] },
+  { name: "255346097 - 3", numbers: [3, 8, 13, 19, 24, 32, 38, 51, 55, 60] },
+  { name: "255346097 - 3.2", numbers: [2, 16, 29, 32, 36, 43, 47, 51, 53, 58] },
+  { name: "255346097 - 3.3", numbers: [7, 16, 21, 33, 46, 47, 48, 49, 53, 56, 60] },
+  { name: "255346097 - 3.4", numbers: [12, 15, 23, 33, 43, 45, 51, 53, 57, 60] },
+  { name: "255346097 - 3.5", numbers: [6, 7, 13, 17, 27, 38, 41, 44, 46, 52, 56, 58] },
+  { name: "254807458 - 4.1", numbers: [2, 6, 10, 12, 17, 22, 27, 33, 38, 41, 48, 52, 56, 60] },
+  { name: "254769601 - 7", numbers: [3, 5, 9, 12, 17, 21, 28, 33, 35, 42, 46, 48, 58, 59] }
+];
 
 
             participants.forEach(participant => {
